snapshots/ecl_parser__fmt__tests__fancy_formatting__before_trigger.snap
---
source: src/fmt.rs
expression: "f(16, r#\"{a: [10, 23], b: 30}\"#).trim()\n\nThis should use INLINE formatting for 'a'"
---
{
    a: [10, 23],
    b: 30,
}
