snapshots/ecl_parser__fmt__tests__fancy_formatting__before_trigger_point.snap
---
source: src/fmt.rs
expression: "reformat::<Meta>(16, r#\"{a: [10, 23], b: 30}\"#).trim()"
---
{
    a: [10, 23],
    b: 30,
}
