snapshots/ecl_parser__fmt__tests__fancy_formatting__fully_block_example.snap
---
source: src/fmt.rs
expression: "reformat::<Meta>(3, r#\"{  apple:  \"delicious\" ,numbers  : [1 ,2]}\"#).trim()"
---
{
    apple: "delicious",
    numbers: [
        1,
        2,
    ],
}
