snapshots/ecl_parser__fmt__tests__fancy_formatting__fully_inline_example.snap
---
source: src/fmt.rs
expression: "reformat::<Meta>(100,\n                 r#\"{  apple:  \"delicious\" ,numbers  : [1 ,2, 3]}\"#).trim()"
---
{apple: "delicious", numbers: [1, 2, 3]}
