snapshots/ecl_parser__fmt__tests__fancy_formatting__mixed_example.snap
---
source: src/fmt.rs
expression: "reformat::<Meta>(30,\n                 r#\"{a: [10, 23], b: [10000000, 230000000, 4900000]}\"#).trim()"
---
{
    a: [10, 23],
    b: [
        10000000,
        230000000,
        4900000,
    ],
}
